fixed space gap on right side

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -5,6 +5,7 @@
   background-color: black;
   padding-right: 10px;
   margin-right: 5px;
+  width: 100%;
 }
 
 .logo {
